ranger_mini_urdf修正完成

--- a/cartographer/src/mycarto/CMakeLists.txt
+++ b/cartographer/src/mycarto/CMakeLists.txt
@@ -1,8 +1,1 @@
-find_package(catkin REQUIRED COMPONENTS
-  roscpp
-  rospy
-  std_msgs
-  tf
-)
-add_executable(CartoTransferPose_main CartoTransferPose_main.cc)
-target_link_libraries(CartoTransferPose_main ${catkin_LIBRARIES})
+/opt/ros/noetic/share/catkin/cmake/toplevel.cmake
