添加全向移动，但是出错

--- a/navigation/src/ranger_2dnav/config/carlike/costmap_common_params.yaml
+++ b/navigation/src/ranger_2dnav/config/carlike/costmap_common_params.yaml
@@ -17,7 +17,7 @@ obstacle_layer:
   combination_method: 1
   observation_sources: scan imu
   laser_scan_sensor: {sensor_frame: scanner_link,data_type: LaserScan, topic: scan, marking: true, clearing: true}
-  imu_sensor: {sensor_frame: imu_link, data_type: Imu, topic: imu/data, marking: true, clearing: false}
+  imu_sensor: {sensor_frame: imu_link, data_type: Imu, topic: imu, marking: true, clearing: false}
 
 inflation_layer:
   # Parameters for the inflation layer of the costmap
