--- a/navigation/src/teb_local_planner_tutorials/cfg/carlike/teb_local_planner_params.yaml
+++ b/navigation/src/teb_local_planner_tutorials/cfg/carlike/teb_local_planner_params.yaml
@@ -21,15 +21,15 @@ TebLocalPlannerROS:
          
  max_vel_x: 0.4
  max_vel_x_backwards: 0.2
- max_vel_y: 0.0
+ max_vel_y: 0.4
  max_vel_theta: 0.3 # the angular velocity is also bounded by min_turning_radius in case of a carlike robot (r = v / omega)
  acc_lim_x: 0.5
  acc_lim_theta: 0.5
 
  # ********************** Carlike robot parameters ********************
- min_turning_radius: 0.5        # Min turning radius of the carlike robot (compute value using a model or adjust with rqt_reconfigure manually)
+ min_turning_radius: 0        # Min turning radius of the carlike robot (compute value using a model or adjust with rqt_reconfigure manually)
  wheelbase: 0.4                 # Wheelbase of our robot
- cmd_angle_instead_rotvel: True # stage simulator takes the angle instead of the rotvel as input (twist message)
+ cmd_angle_instead_rotvel: False # stage simulator takes the angle instead of the rotvel as input (twist message)
  # ********************************************************************
 
  footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
@@ -46,7 +46,7 @@ TebLocalPlannerROS:
  # GoalTolerance
     
  xy_goal_tolerance: 0.2
- yaw_goal_tolerance: 0.1
+ yaw_goal_tolerance: 0.2
  free_goal_vel: False
  complete_global_plan: True
     
@@ -59,7 +59,7 @@ TebLocalPlannerROS:
  obstacle_poses_affected: 15
 
  dynamic_obstacle_inflation_dist: 0.6
- include_dynamic_obstacles: True 
+ include_dynamic_obstacles: Tobstacle_heading_thresholdrue 
 
  costmap_converter_plugin: ""
  costmap_converter_spin_thread: True
@@ -78,7 +78,7 @@ TebLocalPlannerROS:
  weight_acc_lim_x: 1
  weight_acc_lim_theta: 1
  weight_kinematics_nh: 1000
- weight_kinematics_forward_drive: 1
+ weight_kinematics_forward_drive: 10
  weight_kinematics_turning_radius: 1
  weight_optimaltime: 1 # must be > 0
  weight_shortest_path: 0
@@ -121,3 +121,4 @@ TebLocalPlannerROS:
  oscillation_omega_eps: 0.1
  oscillation_recovery_min_duration: 10
  oscillation_filter_duration: 10
+
