--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,6 @@ ugv_gazebo_sim
 **/meshes/**.dae
 IMU/src/handsfree_ros_imu/tutorials
 Map_bag_database/902/902.bag
+cartographer/src/mycarto/meshes/fl.dae
+cartographer/src/mycarto/meshes/fr.dae
+cartographer/src/mycarto/meshes/ranger_base.dae
