碰撞体积修改

--- a/navigation/src/teb_local_planner_tutorials/cfg/carlike/teb_local_planner_params.yaml
+++ b/navigation/src/teb_local_planner_tutorials/cfg/carlike/teb_local_planner_params.yaml
@@ -74,10 +74,12 @@ TebLocalPlannerROS:
  penalty_epsilon: 0.1
  obstacle_cost_exponent: 4
  weight_max_vel_x: 2
+ weight_max_vel_y: 2
  weight_max_vel_theta: 1
  weight_acc_lim_x: 1
+ weight_acc_lim_y: 1
  weight_acc_lim_theta: 1
- weight_kinematics_nh: 1000
+ weight_kinematics_nh: 10
  weight_kinematics_forward_drive: 100
  weight_kinematics_turning_radius: 1
  weight_optimaltime: 1 # must be > 0
