--- a/navigation/src/teb_local_planner_tutorials/cfg/carlike/teb_local_planner_params.yaml
+++ b/navigation/src/teb_local_planner_tutorials/cfg/carlike/teb_local_planner_params.yaml
@@ -24,6 +24,7 @@ TebLocalPlannerROS:
  max_vel_y: 0.4
  max_vel_theta: 0.8 # the angular velocity is also bounded by min_turning_radius in case of a carlike robot (r = v / omega)
  acc_lim_x: 0.5
+ acc_lim_y: 0.5
  acc_lim_theta: 0.5
 
  # ********************** Carlike robot parameters ********************
@@ -79,8 +80,8 @@ TebLocalPlannerROS:
  weight_acc_lim_x: 1
  weight_acc_lim_y: 1
  weight_acc_lim_theta: 1
- weight_kinematics_nh: 10
- weight_kinematics_forward_drive: 100
+ weight_kinematics_nh: 1
+ weight_kinematics_forward_drive: 1
  weight_kinematics_turning_radius: 1
  weight_optimaltime: 1 # must be > 0
  weight_shortest_path: 0
