先斜移再掉头

--- a/navigation/src/teb_local_planner_tutorials/cfg/omnidir/teb_local_planner_params.yaml
+++ b/navigation/src/teb_local_planner_tutorials/cfg/omnidir/teb_local_planner_params.yaml
@@ -105,3 +105,6 @@ TebLocalPlannerROS:
  oscillation_omega_eps: 0.1
  oscillation_recovery_min_duration: 10
  oscillation_filter_duration: 10
+
+
+ feasibility_check_lookahead_distance: 10
