--- a/navigation/src/teb_local_planner_tutorials/cfg/carlike/teb_local_planner_params.yaml
+++ b/navigation/src/teb_local_planner_tutorials/cfg/carlike/teb_local_planner_params.yaml
@@ -1,39 +1,38 @@
 TebLocalPlannerROS:
 
- odom_topic: odom
+  odom_topic: odom
     
- # Trajectory
-  
- teb_autosize: True
- dt_ref: 0.3
- dt_hysteresis: 0.1
- max_samples: 500
- global_plan_overwrite_orientation: True
- allow_init_with_backwards_motion: True
- max_global_plan_lookahead_dist: 3.0
- global_plan_viapoint_sep: -1
- global_plan_prune_distance: 1
- exact_arc_length: False
- feasibility_check_no_poses: 2
- publish_feedback: False
+  # Trajectory
+  teb_autosize: True #自动调整时间分辨率
+  dt_ref: 0.3 #参考时间分辨率
+  dt_hysteresis: 0.1 #时间分辨率滞后
+  max_samples: 500 #最大采样数
+  global_plan_overwrite_orientation: True #全局路径方向是否覆盖
+  allow_init_with_backwards_motion: True #是否允许反向运动
+  max_global_plan_lookahead_dist: 3.0 #全局路径最大前瞻距离
+  global_plan_viapoint_sep: -1 #全局路径中间点间隔
+  global_plan_prune_distance: 1 #全局路径修剪距离
+  exact_arc_length: False #是否精确计算弧长
+  feasibility_check_no_poses: 2 #可行性检查姿态数
+  publish_feedback: False #是否发布反馈信息
     
  # Robot
          
- max_vel_x: 0.4
- max_vel_x_backwards: 0.2
- max_vel_y: 0.4
- max_vel_theta: 0.8 # the angular velocity is also bounded by min_turning_radius in case of a carlike robot (r = v / omega)
- acc_lim_x: 0.5
- acc_lim_y: 0.5
- acc_lim_theta: 0.5
+  max_vel_x: 0.4
+  max_vel_x_backwards: 0.2
+  max_vel_y: 0.4
+  max_vel_theta: 0.8 # the angular velocity is also bounded by min_turning_radius in case of a carlike robot (r = v / omega)
+  acc_lim_x: 0.5
+  acc_lim_y: 0.5
+  acc_lim_theta: 0.5
 
- # ********************** Carlike robot parameters ********************
- min_turning_radius: 0        # Min turning radius of the carlike robot (compute value using a model or adjust with rqt_reconfigure manually)
- wheelbase: 0.4                 # Wheelbase of our robot
- cmd_angle_instead_rotvel: False # stage simulator takes the angle instead of the rotvel as input (twist message)
- # ********************************************************************
+  # ********************** Carlike robot parameters ********************
+  min_turning_radius: 0        # Min turning radius of the carlike robot (compute value using a model or adjust with rqt_reconfigure manually)
+  wheelbase: 0.4                 # Wheelbase of our robot
+  cmd_angle_instead_rotvel: False # stage simulator takes the angle instead of the rotvel as input (twist message)
+  # ********************************************************************
 
- footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
+  footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
    type: "line"
    radius: 0.2 # for type "circular"
    line_start: [-0.2, 0.0] # for type "line"
@@ -45,85 +44,87 @@ TebLocalPlannerROS:
    vertices: [ [0.25, -0.05], [0.18, -0.05], [0.18, -0.18], [-0.19, -0.18], [-0.25, 0], [-0.19, 0.18], [0.18, 0.18], [0.18, 0.05], [0.25, 0.05] ] # for type "polygon"
 
  # GoalTolerance
-    
- xy_goal_tolerance: 0.05
- yaw_goal_tolerance: 0.1
- free_goal_vel: False
- complete_global_plan: True
-    
+      
+  xy_goal_tolerance: 0.05
+  yaw_goal_tolerance: 0.1
+  free_goal_vel: False
+  complete_global_plan: True #是否完成全局路径
+      
  # Obstacles
     
- min_obstacle_dist: 0.3 # This value must also include our robot's expansion, since footprint_model is set to "line".
- inflation_dist: 0.6
- include_costmap_obstacles: True
- costmap_obstacles_behind_robot_dist: 1.0
- obstacle_poses_affected: 15
 
- dynamic_obstacle_inflation_dist: 0.6
- include_dynamic_obstacles: Tobstacle_heading_thresholdrue 
+  min_obstacle_dist: 0.3 #机器人与障碍物之间的最小距离，这个值还必须包括我们机器人的扩展，因为footprint_model设置为“line”。
+  inflation_dist: 0.6 #膨胀距离
+  include_costmap_obstacles: True #是否包括代价地图障碍物
+  costmap_obstacles_behind_robot_dist: 1.0 #机器人后面的代价地图障碍物距离
+  obstacle_poses_affected: 15 #障碍物姿态影响
 
- costmap_converter_plugin: ""
- costmap_converter_spin_thread: True
- costmap_converter_rate: 5
+  dynamic_obstacle_inflation_dist: 0.6 #动态障碍物膨胀距离
+  include_dynamic_obstacles: True #是否包括动态障碍物
 
+  costmap_converter_plugin: "" #代价地图转换插件
+  costmap_converter_spin_thread: True #代价地图转换线程
+  costmap_converter_rate: 5 #代价地图转换速率
  # Optimization
     
- no_inner_iterations: 5
- no_outer_iterations: 4
- optimization_activate: True
- optimization_verbose: False
- penalty_epsilon: 0.1
- obstacle_cost_exponent: 4
- weight_max_vel_x: 2
- weight_max_vel_y: 2
- weight_max_vel_theta: 1
- weight_acc_lim_x: 1
- weight_acc_lim_y: 1
- weight_acc_lim_theta: 1
- weight_kinematics_nh: 1
- weight_kinematics_forward_drive: 1
- weight_kinematics_turning_radius: 1
- weight_optimaltime: 1 # must be > 0
- weight_shortest_path: 0
- weight_obstacle: 100
- weight_inflation: 0.2
- weight_dynamic_obstacle: 10 # not in use yet
- weight_dynamic_obstacle_inflation: 0.2
- weight_viapoint: 1
- weight_adapt_factor: 2
+  no_inner_iterations: 5 #内部迭代次数
+  no_outer_iterations: 4 #外部迭代次数
+  optimization_activate: True #是否激活优化
+  optimization_verbose: False #优化详细信息
+  penalty_epsilon: 0.1 #惩罚因子
+  obstacle_cost_exponent: 4 #障碍物代价指数
+  weight_max_vel_x: 2 #最大线速度权重
+  weight_max_vel_y: 2
+  weight_max_vel_theta: 1 #最大角速度权重
+  weight_acc_lim_x: 1 #线加速度权重
+  weight_acc_lim_y: 1
+  weight_acc_lim_theta: 1 #角加速度权重
+  weight_kinematics_nh: 1 #非完整机器人权重
+  weight_kinematics_forward_drive: 100 #前向驱动权重
+  weight_kinematics_turning_radius: 1 #转弯半径权重
+  weight_optimaltime: 1 #时间最优权重，必须大于0
+  weight_shortest_path: 0 #最短路径权重
+  weight_obstacle: 100 #障碍物权重
+  weight_inflation: 0.2 #膨胀权重
+  weight_dynamic_obstacle: 10 #动态障碍物权重，目前未使用
+  weight_dynamic_obstacle_inflation: 0.2 #动态障碍物膨胀权重
+  weight_viapoint: 1 #中间点权重
+  weight_adapt_factor: 2 #自适应因子权重
 
- # Homotopy Class Planner
+  # Homotopy Class Planner
+  #
+  enable_homotopy_class_planning: True #是否启用同伦类规划
+  enable_multithreading: True #是否启用多线程
+  max_number_classes: 4 #最大类数
+  selection_cost_hysteresis: 1.0 #代价滞后
+  selection_prefer_initial_plan: 0.95 #首选初始路径
+  selection_obst_cost_scale: 1.0 #障碍物代价比例
+  selection_alternative_time_cost: False #备选时间代价
 
- enable_homotopy_class_planning: True
- enable_multithreading: True
- max_number_classes: 4
- selection_cost_hysteresis: 1.0
- selection_prefer_initial_plan: 0.95
- selection_obst_cost_scale: 1.0
- selection_alternative_time_cost: False
 
- roadmap_graph_no_samples: 15
- roadmap_graph_area_width: 5
- roadmap_graph_area_length_scale: 1.0
- h_signature_prescaler: 0.5
- h_signature_threshold: 0.1
- obstacle_heading_threshold: 0.45
- switching_blocking_period: 0.0
- viapoints_all_candidates: True
- delete_detours_backwards: True
- max_ratio_detours_duration_best_duration: 3.0
- visualize_hc_graph: False
- visualize_with_time_as_z_axis_scale: False
+  roadmap_graph_no_samples: 15 #采样数
+  roadmap_graph_area_width: 5 #区域宽度
+  roadmap_graph_area_length_scale: 1.0 #区域长度比例
+  h_signature_prescaler: 0.5 #H-signature的缩放因子
+  h_signature_threshold: 0.1 #H-signature阈值
+  obstacle_heading_threshold: 0.45 #障碍物方向阈值
+  switching_blocking_period: 0.0 #切换阻塞时间
+  viapoints_all_candidates: True #是否考虑所有中间点
+  delete_detours_backwards: True #是否删除后退的绕路
+  max_ratio_detours_duration_best_duration: 3.0 #最大绕路时间与最优时间比率
+  visualize_hc_graph: False #是否可视化同伦类图
+  visualize_with_time_as_z_axis_scale: False #是否将时间作为z轴比例尺
 
-# Recovery
- 
- shrink_horizon_backup: True
- shrink_horizon_min_duration: 10
- oscillation_recovery: True
- oscillation_v_eps: 0.1
- oscillation_omega_eps: 0.1
- oscillation_recovery_min_duration: 10
- oscillation_filter_duration: 10
 
- feasibility_check_lookahead_distance: 10
-#  min_samples: 5
+  # Recovery
+  #部分的参数用于配置当机器人陷入振荡或者其他问题时的恢复策略。
+  shrink_horizon_backup: True #是否缩小规划范围
+  shrink_horizon_min_duration: 10 #缩小规划范围的最小持续时间
+  oscillation_recovery: True #是否启用振荡恢复
+  oscillation_v_eps: 0.1 #线速度振荡阈值
+  oscillation_omega_eps: 0.1 #角速度振荡阈值
+  oscillation_recovery_min_duration: 10 #振荡恢复的最小持续时间
+  oscillation_filter_duration: 10 #振荡滤波时间
+
+  feasibility_check_lookahead_distance: 10
+  #  min_samples: 5
