--- a/navigation/src/ranger_2dnav/config/carlike/teb_local_planner_params.yaml
+++ b/navigation/src/ranger_2dnav/config/carlike/teb_local_planner_params.yaml
@@ -12,13 +12,13 @@ TebLocalPlannerROS:
   global_plan_viapoint_sep: -1 #全局路径中间点间隔
   global_plan_prune_distance: 1 #全局路径修剪距离
   exact_arc_length: False #是否精确计算弧长
-  feasibility_check_no_poses: 2 #可行性检查姿态数
+  feasibility_check_no_poses: 30 #可行性检查姿态数
   publish_feedback: False #是否发布反馈信息
   # Robot
-  max_vel_x: 0.2 #最大线速度
-  max_vel_x_backwards: 0.2 #最大后退线速度
-  max_vel_y: 0.2 #最大横向速度
-  max_vel_theta: 0.2 #最大角速度
+  max_vel_x: 0.3 #最大线速度
+  max_vel_x_backwards: 0.3 #最大后退线速度
+  max_vel_y: 0.3 #最大横向速度
+  max_vel_theta: 0.5 #最大角速度
   acc_lim_x: 0.5 #最大线加速度
   acc_lim_y: 0.5
   acc_lim_theta: 0.5 #最大角加速度
@@ -43,7 +43,7 @@ TebLocalPlannerROS:
 
 # GoalTolerance
 
-  xy_goal_tolerance: 0.2 #xy目标容差
+  xy_goal_tolerance: 0.1 #xy目标容差
   yaw_goal_tolerance: 0.1 #偏航目标容差
   free_goal_vel: False #是否允许自由目标速度
   complete_global_plan: True #是否完成全局路径
@@ -80,7 +80,7 @@ TebLocalPlannerROS:
   weight_kinematics_forward_drive: 100 #前向驱动权重
   weight_kinematics_turning_radius: 1 #转弯半径权重
   weight_optimaltime: 1 #时间最优权重，必须大于0
-  weight_shortest_path: 0 #最短路径权重
+  weight_shortest_path: 1 #最短路径权重
   weight_obstacle: 100 #障碍物权重
   weight_inflation: 0.2 #膨胀权重
   weight_dynamic_obstacle: 10 #动态障碍物权重，目前未使用
@@ -120,4 +120,6 @@ TebLocalPlannerROS:
   oscillation_omega_eps: 0.1 #角速度振荡阈值
   oscillation_recovery_min_duration: 10 #振荡恢复的最小持续时间
   oscillation_filter_duration: 10 #振荡滤波时间
+
+  feasibility_check_lookahead_distance: 10
 
