添加我的teb可视化参数调节，添加卡尔曼模型实物参数

--- a/navigation/src/teb_local_planner/cfg/TebLocalPlannerReconfigure.cfg
+++ b/navigation/src/teb_local_planner/cfg/TebLocalPlannerReconfigure.cfg
@@ -334,7 +334,19 @@ grp_optimization.add("weight_adapt_factor", double_t, 0,
 grp_optimization.add("obstacle_cost_exponent", double_t, 0,
 	"Exponent for nonlinear obstacle cost (cost = linear_cost * obstacle_cost_exponent). Set to 1 to disable nonlinear cost (default)",
 	1, 0.01, 100)
-  
+
+grp_optimization.add("dyp_info1",    double_t,    0,
+	"dyp_prama1", 
+	0.01, 0, 100)
+grp_optimization.add("dyp_info2",    double_t,    0,
+	"dyp_prama1", 
+	0.01, 0, 100)
+grp_optimization.add("dyp_info3",    double_t,    0,
+	"dyp_prama1", 
+	0.01, 0, 100)
+grp_optimization.add("dyp_info4",    double_t,    0,
+	"dyp_prama1", 
+	0.01, 0, 100)
   
 # Homotopy Class Planner
 grp_hcp = gen.add_group("HCPlanning", type="tab")    
@@ -413,6 +425,8 @@ grp_hcp.add("visualize_hc_graph",    bool_t,    0,
 	False)
 
 
+
+
 # Recovery
 grp_recovery = gen.add_group("Recovery", type="tab")   
 
@@ -443,5 +457,6 @@ grp_recovery_divergence.add(
     0,
     100
 )
+
 
 exit(gen.generate("teb_local_planner", "teb_local_planner", "TebLocalPlannerReconfigure"))
