--- a/navigation/src/teb_local_planner_tutorials/cfg/carlike/teb_local_planner_params.yaml
+++ b/navigation/src/teb_local_planner_tutorials/cfg/carlike/teb_local_planner_params.yaml
@@ -4,17 +4,17 @@ TebLocalPlannerROS:
     
   # Trajectory
   teb_autosize: True #自动调整时间分辨率
-  dt_ref: 0.5 #参考时间分辨率
+  dt_ref: 0.3 #参考时间分辨率
   dt_hysteresis: 0.1 #时间分辨率滞后
   max_samples: 500 #最大采样数
   global_plan_overwrite_orientation: True #全局路径方向是否覆盖
   allow_init_with_backwards_motion: False #是否允许反向运动
   max_global_plan_lookahead_dist: 3.0 #全局路径最大前瞻距离
-  global_plan_viapoint_sep: -0.5 #全局路径中间点间隔
-  global_plan_prune_distance: 1 #全局路径修剪距离
+  global_plan_viapoint_sep: -1 #全局路径中间点间隔
+  global_plan_prune_distance: 0.5 #全局路径修剪距离
   exact_arc_length: False #是否精确计算弧长
-  feasibility_check_no_poses: 5 #可行性检查姿态数
-  publish_feedback: True #是否发布包含完整轨迹和活动障碍物的反馈
+  feasibility_check_no_poses: 3 #可行性检查姿态数
+  publish_feedback: False #是否发布包含完整轨迹和活动障碍物的反馈
     
  # Robot
          
@@ -46,9 +46,9 @@ TebLocalPlannerROS:
  # GoalTolerance
       
   xy_goal_tolerance: 0.2
-  yaw_goal_tolerance: 0.2
-  free_goal_vel: False
-  complete_global_plan: False #是否完成全局路径
+  yaw_goal_tolerance: 0.1
+  free_goal_vel: True
+  complete_global_plan: True #是否完成全局路径
       
  # Obstacles
     
@@ -95,7 +95,7 @@ TebLocalPlannerROS:
   #
   enable_homotopy_class_planning: True #是否启用同伦类规划
   enable_multithreading: True #是否启用多线程
-  max_number_classes: 4 #最大类数
+  max_number_classes: 2 #最大类数
   selection_cost_hysteresis: 1.0 #代价滞后
   selection_prefer_initial_plan: 0.95 #首选初始路径
   selection_obst_cost_scale: 1.0 #障碍物代价比例
@@ -109,7 +109,7 @@ TebLocalPlannerROS:
   h_signature_threshold: 0.1 #H-signature阈值
   obstacle_heading_threshold: 0.45 #障碍物方向阈值
   switching_blocking_period: 0.0 #切换阻塞时间
-  viapoints_all_candidates: False #是否考虑所有中间点
+  viapoints_all_candidates: True #是否考虑所有中间点
   delete_detours_backwards: True #是否删除后退的绕路
   max_ratio_detours_duration_best_duration: 3.0 #最大绕路时间与最优时间比率
   visualize_hc_graph: False #是否可视化同伦类图
@@ -127,9 +127,9 @@ TebLocalPlannerROS:
   oscillation_filter_duration: 10 #振荡滤波时间
 
   feasibility_check_lookahead_distance: 3
-  min_samples: 1
+  # min_samples: 1
 
   dyp_info1: 1
   dyp_info2: 1
-  dyp_info3: 1
+  dyp_info3: 0.1
   dyp_info4: 1
