获取定位位置，二段路目标点发送，分段方案验证完成

--- a/navigation/src/ranger_2dnav/CMakeLists.txt
+++ b/navigation/src/ranger_2dnav/CMakeLists.txt
@@ -185,6 +185,11 @@ include_directories(
 #   FILES_MATCHING PATTERN "*.h"
 #   PATTERN ".svn" EXCLUDE
 # )
+install(DIRECTORY
+  scripts
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+  PATTERN ".svn" EXCLUDE
+)
 
 ## Mark other files for installation (e.g. launch and bag files, etc.)
 # install(FILES
