--- a/.gitignore
+++ b/.gitignore
@@ -150,3 +150,4 @@ cartographer/src/mycarto/meshes/fl.dae
 cartographer/src/mycarto/meshes/fr.dae
 cartographer/src/mycarto/meshes/ranger_base.dae
 navigation/src/hit_nav
+Doc/datas/902-data-12-23.bag
