优化注释信息，方法名次统一为MMT（MultiModalTEB 多模式TEB）

--- a/navigation/src/teb_local_planner/cfg/TebLocalPlannerReconfigure.cfg
+++ b/navigation/src/teb_local_planner/cfg/TebLocalPlannerReconfigure.cfg
@@ -335,17 +335,17 @@ grp_optimization.add("obstacle_cost_exponent", double_t, 0,
 	"Exponent for nonlinear obstacle cost (cost = linear_cost * obstacle_cost_exponent). Set to 1 to disable nonlinear cost (default)",
 	1, 0.01, 100)
 
-grp_optimization.add("dyp_info1",    double_t,    0,
-	"dyp_prama1", 
+grp_optimization.add("MMT_info1",    double_t,    0,
+	"MMT_prama1", 
 	0.01, 0, 100)
-grp_optimization.add("dyp_info2",    double_t,    0,
-	"dyp_prama1", 
+grp_optimization.add("MMT_info2",    double_t,    0,
+	"MMT_prama1", 
 	0.01, 0, 100)
-grp_optimization.add("dyp_info3",    double_t,    0,
-	"dyp_prama1", 
+grp_optimization.add("MMT_info3",    double_t,    0,
+	"MMT_prama1", 
 	0.01, 0, 100)
-grp_optimization.add("dyp_info4",    double_t,    0,
-	"dyp_prama1", 
+grp_optimization.add("MMT_info4",    double_t,    0,
+	"MMT_prama1", 
 	0.01, 0, 100)
   
 # Homotopy Class Planner
