MMT FourWheeled use vx install of x

--- a/navigation/src/ranger_2dnav/config/carlike/teb_local_planner_params.yaml
+++ b/navigation/src/ranger_2dnav/config/carlike/teb_local_planner_params.yaml
@@ -124,7 +124,7 @@ TebLocalPlannerROS:
 
   feasibility_check_lookahead_distance: 10
 
-  dyp_info1: 1
-  dyp_info2: 1
-  dyp_info3: 1
-  dyp_info4: 1
+  MMT_info1: 1
+  MMT_info2: 1
+  MMT_info3: 1
+  MMT_info4: 1
